@@ -1,9 +1,10 @@
-#!/bin/sh
+#!/bin/bash
+
 # ./ry.sh start 启动 stop 停止 restart 重启 status 状态
 AppName=ruoyi-admin.jar
 
 # JVM参数
-JVM_OPTS="-Dname=$AppName  -Duser.timezone=Asia/Shanghai -Xms512m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
+JVM_OPTS="-Dname=$AppName  -Duser.timezone=Asia/Shanghai -Xms512m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC"
 APP_HOME=`pwd`
 LOG_PATH=$APP_HOME/logs/$AppName.log
 
@@ -19,20 +20,17 @@ then
     exit 1
 fi
 
-function start()
-{
-    PID=`ps -ef |grep java|grep $AppName|grep -v grep|awk '{print $2}'`
-
+function start() {
+  PID=`ps -ef |grep java|grep $AppName|grep -v grep|awk '{print $2}'`
 	if [ x"$PID" != x"" ]; then
-	    echo "$AppName is running..."
+	  echo "$AppName is running..."
 	else
-		nohup java $JVM_OPTS -jar $AppName > /dev/null 2>&1 &
+		nohup java $JVM_OPTS -jar $APP_HOME/ruoyi-admin/target/$AppName > /dev/null 2>&1 &
 		echo "Start $AppName success..."
 	fi
 }
 
-function stop()
-{
+function stop() {
     echo "Stop $AppName"
 
 	PID=""
@@ -55,15 +53,13 @@ function stop()
 	fi
 }
 
-function restart()
-{
+function restart() {
     stop
     sleep 2
     start
 }
 
-function status()
-{
+function status() {
     PID=`ps -ef |grep java|grep $AppName|grep -v grep|wc -l`
     if [ $PID != 0 ];then
         echo "$AppName is running..."
@@ -82,5 +78,4 @@ case $1 in
     status)
     status;;
     *)
-
 esac
